--- a/playbook/roles/vim/tasks/main.yaml
+++ b/playbook/roles/vim/tasks/main.yaml
@@ -3,7 +3,7 @@
     state: present
     name:
       - vim
-  become: yes
+  become: True
 
 - name: Creates autoload directory
   file:
@@ -24,55 +24,55 @@
   ansible.builtin.git:
     repo: 'https://github.com/itchyny/lightline.vim.git'
     dest: ~/.vim/bundle/lightline.vim
-    update: yes
+    update: True
 
 - name: addon vim-gitgutter A Vim plugin which shows a git diff in the sign column.
   ansible.builtin.git:
     repo: 'https://github.com/airblade/vim-gitgutter.git'
     dest: ~/.vim/bundle/gitgutter.vim
-    update: yes
+    update: True
 
 - name: addon indentLine
   ansible.builtin.git:
     repo: 'https://github.com/Yggdroot/indentLine.git'
     dest: ~/.vim/bundle/indentLine
-    update: yes
+    update: True
 
 - name: addon vim-gitbranch provides a function which returns the name of the git branch.
   ansible.builtin.git:
     repo: 'https://github.com/itchyny/vim-gitbranch.git'
     dest: ~/.vim/bundle/gitbranch.vim
-    update: yes
+    update: True
       
 - name: addon mundo.vim (A Vim plugin to visualizes the Vim undo tree.)
   ansible.builtin.git:
     repo: 'https://github.com/simnalamburt/vim-mundo.git'
     dest: ~/.vim/bundle/vim-mundo
-    update: yes
+    update: True
 
 - name: The only theme you should be using. Heavily influenced by The Primeagen
   ansible.builtin.git:
     repo: 'https://github.com/morhetz/gruvbox.git'
     dest: ~/.vim/bundle/gruvbox
-    update: yes
+    update: True
 
 - name: The fancy start screen for vim
   ansible.builtin.git:
     repo: 'https://github.com/mhinz/vim-startify.git'
     dest: ~/.vim/bundle/vim-startify
-    update: yes
+    update: True
 
 - name: vim-bookmarks 
   ansible.builtin.git:
     repo: 'https://github.com/MattesGroeger/vim-bookmarks.git'
     dest: ~/.vim/bundle/vim-bookmarks
-    update: yes
+    update: True
 
 - name: vim-floaterm 
   ansible.builtin.git:
     repo: 'https://github.com/voldikss/vim-floaterm.git'
     dest: ~/.vim/bundle/vim-floaterm 
-    update: yes
+    update: True
 
 - name: Create undo directory
   ansible.builtin.file:
@@ -83,25 +83,25 @@
   ansible.builtin.git:
     repo: 'https://github.com/scrooloose/nerdtree.git'
     dest: ~/.vim/bundle/nerdtree
-    update: yes
+    update: True
 
 - name: addon ultisnips.vim (UltiSnips is the ultimate solution for snippets in Vim.)
   ansible.builtin.git:
     repo: 'https://github.com/SirVer/ultisnips.git'
     dest: ~/.vim/bundle/ultisnips
-    update: yes
+    update: True
 
 - name: addon salt-vim
   ansible.builtin.git:
     repo: 'https://github.com/vmware-archive/salt-vim.git'
     dest: ~/.vim/bundle/salt-vim
-    update: yes
+    update: True
 
 - name: setup my ultisnips
   ansible.builtin.git:
     repo: 'https://github.com/tinoschroeter/vim.UltiSnips.git'
     dest: ~/.vim/UltiSnips
-    update: yes
+    update: True
 
 - name: addon vim-prettier.vim (An opinionated code formatter)
   ansible.builtin.git:
@@ -113,31 +113,31 @@
   ansible.builtin.git:
     repo: 'https://github.com/honza/vim-snippets.git'
     dest: ~/.vim/bundle/vim-snippets
-    update: yes
+    update: True
 
 - name: addon vim-jsx-pretty
   ansible.builtin.git:
     repo: 'https://github.com/MaxMEllon/vim-jsx-pretty.git'
     dest: ~/.vim/bundle/vim-jsx-pretty
-    update: yes
+    update: True
 
 - name: addon vim-go
   ansible.builtin.git:
     repo: 'https://github.com/fatih/vim-go.git'
     dest: ~/.vim/bundle/vim-go
-    update: yes
+    update: True
 
 - name: addon vim-fzf
   ansible.builtin.git:
     repo: 'https://github.com/junegunn/fzf.vim'
     dest: ~/.vim/bundle/vim-fzf
-    update: yes
+    update: True
 
 - name: addon ConquerOfCompletion
   ansible.builtin.git:
     repo: 'https://github.com/neoclide/coc.nvim.git'
     dest: ~/.vim/bundle/coc.nvim
-    update: yes
+    update: True
 
 - name: addon Markdown Preview for (Neo)vim
   ansible.builtin.git:
