--- a/playbook/roles/vm/tasks/main.yaml
+++ b/playbook/roles/vm/tasks/main.yaml
@@ -4,4 +4,4 @@
     name:
       - virtualbox # VirtualBox is a powerful x86 and AMD64/Intel64 virtualization product for enterprise as well as home use.
       - vagrant    # Development Environments Made Easy.
-  become: yes
+  become: True
