--- a/playbook/roles/npm/tasks/main.yaml
+++ b/playbook/roles/npm/tasks/main.yaml
@@ -1,6 +1,6 @@
 - name: "Install NPM-distributed command-line tools"
   npm:
-    global: yes
+    global: True
     name: "{{ item }}"
   with_items:
     - snyk       # Find and automatically fix vulnerabilities in your code.
