--- a/playbook/roles/vm/tasks/main.yaml
+++ b/playbook/roles/vm/tasks/main.yaml
@@ -1,7 +1,7 @@
-- name: Install VM stuff
-  apt:
-    state: present
-    name:
-      - virtualbox # VirtualBox is a powerful x86 and AMD64/Intel64 virtualization product for enterprise as well as home use.
-      - vagrant    # Development Environments Made Easy.
-  become: True
+#- name: Install VM stuff
+#  apt:
+#    state: present
+#    name:
+#      - virtualbox # VirtualBox is a powerful x86 and AMD64/Intel64 virtualization product for enterprise as well as home use.
+#      - vagrant    # Development Environments Made Easy.
+#  become: True
