update: neovim version

--- a/playbook/roles/software/tasks/main.yaml
+++ b/playbook/roles/software/tasks/main.yaml
@@ -83,7 +83,7 @@
 
 - name: Install ppa:neovim
   ansible.builtin.shell:
-    cmd: add-apt-repository ppa:neovim-ppa/stable
+    cmd: add-apt-repository ppa:neovim-ppa/unstable
   become: True
 
 - name: Install neovim
