add: create folder for k9s config

--- a/playbook/roles/dotfiles/tasks/main.yaml
+++ b/playbook/roles/dotfiles/tasks/main.yaml
@@ -43,6 +43,12 @@
     url: https://raw.githubusercontent.com/tinoschroeter/dotfiles/master/.config/terminator/config 
     dest: ~/.config/terminator/config
 
+- name: Create a directory for k9s if it does not exist
+  ansible.builtin.file:
+    path: ~/.config/k9s
+    state: directory
+    mode: '0755'
+
 - name: Copy k9s theme
   ansible.builtin.get_url:
     url: https://raw.githubusercontent.com/tinoschroeter/dotfiles/master/.config/k9s/skin.yml 
