--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -1,16 +1,17 @@
 [global_config]
   focus = system
+  window_state = maximise
   title_at_bottom = True
   title_hide_sizetext = True
   title_transmit_bg_color = "#d30102"
 [keybindings]
 [profiles]
   [[default]]
-    background_color = "#282828"
+    background_color = "#002b36"
     background_darkness = 0.97
     background_type = transparent
     cursor_color = "#7c6f64"
-    foreground_color = "#ebdbb2"
+    foreground_color = "#839496"
     scrollbar_position = hidden
     scrollback_lines = 1000
     palette = "#181818:#cc241d:#98971a:#d79921:#458588:#b16286:#689d6a:#ebdbb2:#928374:#fb4934:#b8bb26:#fabd2f:#83a598:#d3869b:#8ec07c:#ebdbb2"
@@ -37,7 +38,7 @@
     [[[child1]]]
       type = Terminal
       parent = window0
-      profile = Tokyo Night Storm
+      profile = default
     [[[window0]]]
       type = Window
       parent = ""
